// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1jtn9d9"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render margin 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1qp04a1"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1nsnnjo"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-x56esa"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1utqbum"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-mhw1vm"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1i1kr37"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render marginY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-m07803"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render padding 1`] = `
<div
  class="wp-components-view wp-components-spacer css-vzhvim"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingBottom 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1khp149"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingLeft 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1acfhga"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingRight 1`] = `
<div
  class="wp-components-view wp-components-spacer css-17bh9oh"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingTop 1`] = `
<div
  class="wp-components-view wp-components-spacer css-ftv1rs"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingX 1`] = `
<div
  class="wp-components-view wp-components-spacer css-1j0g1qy"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;

exports[`props should render paddingY 1`] = `
<div
  class="wp-components-view wp-components-spacer css-s3iwy6"
  data-g2-c16t="true"
  data-g2-component="Spacer"
/>
`;
